--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
                     <expectedConflicts>0</expectedConflicts>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>src.RecDesParser</mainClass>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
