--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,18 @@
                     <mainClass>src.Toy2ToC</mainClass>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version> <!-- Aggiorna alla versione più recente -->
+                <configuration>
+                    <systemPropertyVariables>
+                        <logErrorStackTrace>true</logErrorStackTrace>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
