--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>main.testers.Toy2ToC</mainClass>
+                    <mainClass>src.main.testers.Toy2ToC</mainClass>
                 </configuration>
             </plugin>
         </plugins>
